--- a/provider-demo/src/main/resources/application.yml
+++ b/provider-demo/src/main/resources/application.yml
@@ -3,9 +3,16 @@ server:
 
 spring:
   application:
-    name: provider-demo-server
+    name: provider-demo
+#切换成nacos
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+#切换成eureka
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://replica1:8002/eureka/,http://replica2:8003/eureka/
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://replica1:8002/eureka/,http://replica2:8003/eureka/
+
