--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
         <module>message-dingding</module>
         <module>elastic-job</module>
         <module>netty</module>
+        <module>provider-demo-api</module>
+        <module>common</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -83,7 +85,7 @@
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
-                <version>2.2.1.RELEASE</version>
+                <version>2.2.6.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
