--- a/consumer-demo/pom.xml
+++ b/consumer-demo/pom.xml
@@ -11,6 +11,20 @@
 
     <artifactId>consumer-demo</artifactId>
 
+    <properties>
+        <java.version>1.8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
+
+        <spring.boot.version>2.1.3.RELEASE</spring.boot.version>
+        <springfox.swagger.version>2.9.2</springfox.swagger.version>
+        <knife4j.spring.boot.starter.version>2.0.3</knife4j.spring.boot.starter.version>
+        <esapi.version>2.1.0.1</esapi.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -27,7 +41,7 @@
         <dependency>
             <groupId>com.moxuanran</groupId>
             <artifactId>provider-demo-api</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.moxuanran</groupId>
@@ -37,6 +51,21 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-loadbalancer</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${springfox.swagger.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${springfox.swagger.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
+            <version>${knife4j.spring.boot.starter.version}</version>
         </dependency>
     </dependencies>
 
