--- a/provider-demo/pom.xml
+++ b/provider-demo/pom.xml
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>com.moxuanran</groupId>
             <artifactId>provider-demo-api</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.1-RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
