--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>common</module>
         <module>sentinel-demo</module>
         <module>lambda</module>
+        <module>code-thought</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
