--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>cache</module>
         <module>design-model</module>
         <module>netease-test</module>
+        <module>distributed-job</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
