--- a/gateway-demo/pom.xml
+++ b/gateway-demo/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.83</version>
         </dependency>
+        <dependency>
+            <groupId>com.moxuanran.learning</groupId>
+            <artifactId>formatter-spring-boot-starter</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
