--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>distributed-job</module>
         <module>effective-java</module>
         <module>formatter-spring-boot-starter</module>
+        <module>map-struct</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
