--- a/star-demo/pom.xml
+++ b/star-demo/pom.xml
@@ -11,6 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>star-demo</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -24,6 +25,24 @@
             <artifactId>component-common</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.netease.component</groupId>
+            <artifactId>component-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.netease.component</groupId>
+            <artifactId>component-starrpc</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.netease.component</groupId>
+            <artifactId>component-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.netease.bchain</groupId>
+            <artifactId>project-basic-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
@@ -35,7 +54,21 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>2.2.9.RELEASE</version>
+        </dependency>
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
